@@ -30,7 +30,7 @@
   </dd>
   <dt>Latest version:
   <dd>
-    
+
     <a href="http://www.w3.org/TR/filter-effects/">[LATEST]</a>
   </dd>
   <dt>Editors:</dt>
@@ -604,7 +604,7 @@
   <dt><dfn>contrast(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
   <dd>
     Adjusts the contrast of the input.
-    A value of 0% will create an image that is completely black. A value of 100% leaves the
+    A value of 0% will create an image that is completely gray. A value of 100% leaves the
     input unchanged. Values of amount over 100% are allowed, providing results with less contrast.
     If the parameter is missing, a value of 100% is used.
     The markup equivalent of this function is <a href="#contrastEquivalent">given below</a>.
