@@ -1127,7 +1127,7 @@
     &lt;percentage&gt;)</dfn>
 
    <dd> Adjusts the contrast of the input. A value of 0% will create an image
-    that is completely black. A value of 100% leaves the input unchanged.
+    that is completely gray. A value of 100% leaves the input unchanged.
     Values of amount over 100% are allowed, providing results with less
     contrast. If the parameter is missing, a value of 100% is used. The
     markup equivalent of this function is <a href="#contrastEquivalent">given
